--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ bcrypt = "^3.2.0"
 email-validator = "^1.2.1"
 anyio = "^3.6.1"
 setuptools = "^67.3.2"
+boto3 = "^1.26.75"
+moto = {extras = ["s3"], version = "^4.1.3"}
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
