--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,10 +2,36 @@ version: "3.8"
 services:
   app:
     build: .
-    restart: always
+    restart: unless-stopped
     command: bash ./start_server.sh
     ports:
       - 127.0.0.1:8008:80
+    networks:
+      - bidhive-ml-api
+
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: 'rabbitmq'
+    restart: unless-stopped
+    ports:
+      - 5672:5672
+      - 15672:15672
+    networks:
+      - bidhive-ml-api
+
+  redis:
+    image: redis
+    restart: unless-stopped
+    ports:
+      - 127.0.0.1:6379:6379
+    stdin_open: true
+    networks:
+      - bidhive-ml-api
 
 volumes:
   db_data:
+
+
+networks:
+  bidhive-ml-api:
+    driver: bridge
