--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,11 @@ bcrypt = "^3.2.0"
 email-validator = "^1.2.1"
 anyio = "^3.6.1"
 setuptools = "^67.3.2"
-boto3 = "^1.26.75"
 moto = {extras = ["s3"], version = "^4.1.3"}
+boto3 = "~1.24.59"
+aioboto3 = "^10.4.0"
+celery = "^5.2.7"
+redis = "^4.5.1"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
