--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,10 @@ boto3 = "~1.24.59"
 aioboto3 = "^10.4.0"
 celery = "^5.2.7"
 redis = "^4.5.1"
+sqlalchemy = "^2.0.4"
+psycopg2-binary = "^2.9.5"
+asyncpg = "^0.27.0"
+alembic = "^1.9.4"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
