--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ sqlalchemy = "^2.0.4"
 psycopg2-binary = "^2.9.5"
 asyncpg = "^0.27.0"
 alembic = "^1.9.4"
+invoke = "^2.0.0"
+ipython = "^8.10.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
