--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,10 @@ asyncpg = "^0.27.0"
 alembic = "^1.9.4"
 invoke = "^2.0.0"
 ipython = "^8.10.0"
+python-docx = "^0.8.11"
+docx2txt = "^0.8"
+pandas = "^1.5.3"
+s3fs = "^2023.1.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
