--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ bcrypt = "^3.2.0"
 email-validator = "^1.2.1"
 anyio = "^3.6.1"
 setuptools = "^67.3.2"
-moto = {extras = ["s3"], version = "^4.1.3"}
+moto = {extras = ["server"], version = "^4.1.4"}
 boto3 = "~1.24.59"
 aioboto3 = "^10.4.0"
 celery = "^5.2.7"
